Lesson 3 final commit

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
             <h2 class="featurette-heading">Highlight #5
                 <span class="text-muted">Github</span>
             </h2>
-            <p class="lead">&nbsp;&nbsp;&nbsp;</p>
-            <p class="lead">&nbsp;&nbsp;&nbsp;</p>
-            <p class="lead">&nbsp;&nbsp;&nbsp;</p>
+            <p class="lead">&nbsp;&nbsp;&nbsp;GitHub is a public web-based hosting service for the version control system Git, released in 2007. Since its main platform revolves around Git, it offers all of the same distributed version control and source code management functionality of it as well as adding more of its own personal features. </p>
+            <p class="lead">&nbsp;&nbsp;&nbsp;I for one actually find GitHub really interesting because it allows people to share there unique codes and programs to the world publicly. Thanks to GitHub I have managed to find and play around with cool programs that have helped me tinker around with my smart items.</p>
+            <p class="lead">&nbsp;&nbsp;&nbsp;In relation to this class though, we will personally be using GitHub and learning of it. </p>
         </div>
 
         <hr class="featurette-divider">
